--- a/style.css
+++ b/style.css
@@ -26,3 +26,20 @@ h2 {
 	color: white;
 	text-transform: capitalize;
 }
+
+.center-text {
+	background-color: white;
+	border-radius: 20px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	margin-left: 25%;
+	margin-right: 25%;
+	padding: 30px 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+h1 {
+	padding-bottom: 20px;
+}
