--- a/contact.css
+++ b/contact.css
@@ -45,17 +45,18 @@ a:hover {
   display: flex;
   flex-direction: column; 
   justify-content: center; 
-  align-items: center;
+  border: 10px solid rgba(0,0,0,0.1);
 }
 
 .contact-form * {
   width: 100%;
 }
 
-/* .contact-form h1, p {
+.contact-form h1, p {
   display: flex;
   align-items: center;
-} */
+  justify-content: center;
+}
 
 form {
   display: flex;
